--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,13 @@
-# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
-# This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs=-Xmx6G
+org.gradle.jvmargs=-Xmx4G
 org.gradle.daemon=false
+
+mod_name=minecraftsuggestions
+mod_version=0.4.0
+
+curse_type=beta
+projectId=398137
+github_project=mawathilde/minecraftsuggestions
+
+mc_version=1.16.3
+forge_version=34.0.1
+mcp_mappings=20200723-1.16.1
