--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ minecraft {
             property 'forge.logging.console.level', 'debug'
 
             mods {
-                examplemod {
+                minecraftsuggestions {
                     source sourceSets.main
                 }
             }
@@ -51,7 +51,7 @@ minecraft {
             property 'forge.logging.console.level', 'debug'
 
             mods {
-                examplemod {
+                minecraftsuggestions {
                     source sourceSets.main
                 }
             }
@@ -66,10 +66,10 @@ minecraft {
             // Recommended logging level for the console
             property 'forge.logging.console.level', 'debug'
 
-            args '--mod', 'examplemod', '--all', '--output', file('src/generated/resources/')
+            args '--mod', 'minecraftsuggestions', '--all', '--output', file('src/generated/resources/')
 
             mods {
-                examplemod {
+                minecraftsuggestions {
                     source sourceSets.main
                 }
             }
