--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ org.gradle.jvmargs=-Xmx4G
 org.gradle.daemon=false
 
 mod_name=minecraftsuggestions
-mod_version=0.7.1
+mod_version=1.0.0-beta1
 
 curse_type=beta
 projectId=398137
@@ -10,4 +10,5 @@ github_project=mawathilde/minecraftsuggestions
 
 mc_version=1.16.3
 forge_version=34.0.1
+cloth_config_version=3032280
 mcp_mappings=20200723-1.16.1
