--- a/gradle.properties
+++ b/gradle.properties
@@ -2,9 +2,9 @@ org.gradle.jvmargs=-Xmx4G
 org.gradle.daemon=false
 
 mod_name=minecraftsuggestions
-mod_version=1.0.0-beta2
+mod_version=1.0.0
 
-curse_type=beta
+curse_type=release
 projectId=398137
 github_project=mawathilde/minecraftsuggestions
 
